Update gitconfig email

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
 	name = Tyler Hobbs
-	email = tyler@tylerlhobbs.com
+	email = tyler@tylerxhobbs.com
 [core]
 	excludesfile = /home/thobbs/.gitignore_global
